--- a/index.html
+++ b/index.html
@@ -104,17 +104,20 @@
             <div class="features__item features__item--first">
               <h3 class="features__item-title">Поднимает настроение</h3>
               <p class="features__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+              <img src="images/screen1-desktop.svg" class="screen-features-desktop screen1-desktop">
             </div>
             <div class="features__item features__item--second">
               <h3 class="features__item-title">Меняет мир вокруг</h3>
               <p class="features__item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              <img src="images/screen2-desktop.svg" class="screen-features-desktop screen2-desktop">
             </div>
             <div class="features__item features__item--third">
               <h3 class="features__item-title">Заводит новых друзей</h3>
-                <p class="features__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+              <p class="features__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+              <img src="images/screen3-desktop.svg" class="screen-features-desktop screen3-desktop">
             </div>
           </div>
-          <img src
+          <img src="images/screen-features-tablet.svg" class="screen-features-tablet">
         </div>
       </section>
   </main>
