LEARN-476: Footer design fixed

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         </div>
       </section>
 
-      <div class="map">
+      <!--<div class="map">
         <picture>
           <source media="(min-width: 1025px)"
             srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x">
@@ -351,18 +351,17 @@
         </picture>
 
         <div class="map__marker"></div>
-      </div>
+      </div>-->
   </main>
   <footer class="page-footer">
     <div class="page-footer__content-wrapper">
       <a class="footer-logo" aria-label="Логотип">
-        <svg class="footer-logo__image footer-logo__image--mobile" width="146" height="40">
+        <svg class="footer-logo__image footer-logo__image--tablet" width="146" height="40">
           <use xlink:href="sprite/svg/sprite.symbol.svg#footer-logo-tablet"></use>
         </svg>
-        <svg class="footer-logo__image footer-logo__image--tablet" width="146" height="40">
+        <svg class="footer-logo__image footer-logo__image--desktop" width="146" height="40">
           <use xlink:href="sprite/svg/sprite.symbol.svg#footer-logo-desktop"></use>
         </svg>
-        <img class="footer-logo__image" src="images/icons/logo-footer.png" />
       </a>
 
       <ul class="social-links">
@@ -387,7 +386,7 @@
             </svg>
           </a>
         </li>
-      </ul>-->
+      </ul>
 
       <div class="page-footer__copyright">
         <span class="page-footer__copyright-text">Разработано</span>
