--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
       </section>
 
-      <section class="contacts content-wrapper">
+      <section class="contacts">
 
         <p class="contacts__title">Остались вопросы? Свяжитесь с нами!</p>
 
@@ -337,22 +337,14 @@
               <address class="contacts__list-address">ул. Большая Конюшенная, 19/8</address>
             </div>
           </div>
-
         </div>
+        <div class="contacts__triangle"></div>
       </section>
 
       <div class="map">
-        <picture>
-          <source media="(min-width: 1025px)"
-            srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x">
-          <source media="(min-width: 660px)"
-            srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x">
-          <img class="map__image" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x"
-            alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-        </picture>
-
-        <div class="map__marker"></div>
-        <div class="map__interactive" id="map"></div>
+        <svg class="map__marker" width="36" height="35">
+          <use xlink:href="sprite/svg/sprite.symbol.svg#map-marker"></use>
+        </svg>
       </div>
   </main>
   <footer class="page-footer">
