LEARN-476: Switch slides improved

--- a/index.html
+++ b/index.html
@@ -205,7 +205,14 @@
             <p class="slider-reviews__author-description">25 лет, водитель трамвая</p>
           </div>
         </div>
-
+        <div class="slider-reviews__slider-controls slider-controls">
+          <button class="slider-controls__button slider-controls__button--active" type="button" aria-label="1">
+          </button>
+          <button class="slider-controls__button" type="button" aria-label="2">
+          </button>
+          <button class="slider-controls__button" type="button" aria-label="3">
+          </button>
+        </div>
         <div class="slider-reviews__slider-nav slider-nav">
           <svg class="slider-nav__slider-button slider-nav__slider-button--prev" width="22" height="41">
             <use xlink:href="sprite/svg/sprite.symbol.svg#arrow-desktop"></use>
@@ -304,7 +311,7 @@
           <div class="price__slider-controls slider-controls">
             <button class="slider-controls__button" type="button" aria-label="1">
             </button>
-            <button class="slider-controls__button slider-controls__button--current" type="button" aria-label="2">
+            <button class="slider-controls__button slider-controls__button--active" type="button" aria-label="2">
             </button>
             <button class="slider-controls__button" type="button" aria-label="3">
             </button>
