--- a/index.html
+++ b/index.html
@@ -405,5 +405,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="index.js"></script>
+  <script src="/js/menu.js"></script>
+  <script src="/js/slider.js"></script>
 </body>
 </html>
