LEARN-476: Images optimized

--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
     
     <div class="header-content">
       <div class="iphone-image iphone-image--mobile">
-        <img src="images/iphone-in-hand-mobile.svg" 
-           srcset="images/iphone-in-hand-mobile.svg 1x, images/iphone-in-hand-mobile@2x.svg 2x" 
+        <img src="imagesmin/iphone-in-hand-mobile@1x.png" 
+           srcset="imagesmin/iphone-in-hand-mobile@1x.png 1x, imagesmin/iphone-in-hand-mobile@2x.png 2x" 
            class="iphone-image__item" 
            alt="iPhone" 
         />
-        <img src="images/iphone-screen-main-mobile.jpg" 
-            srcset="images/iphone-screen-main-mobile.jpg 1x, images/iphone-screen-main-mobile@2x.jpg"
+        <img src="imagesmin/iphone-screen-main-mobile@1x.png" 
+            srcset="imagesmin/iphone-screen-main-mobile@1x.png 1x, imagesmin/iphone-screen-main-mobile@2x.png"
             class=" iphone-image__item-screen" alt="iPhone screen" 
         />
       </div>
       <div class="iphone-image iphone-image--tablet">
-        <img src="images/iphone-in-hand-tablet.svg" 
-           srcset="images/iphone-in-hand-tablet.svg 1x, images/iphone-in-hand-tablet@2x.svg 2x" 
+        <img src="imagesmin/iphone-in-hand-tablet@1x.png" 
+           srcset="imagesmin/iphone-in-hand-tablet@1x.png 1x, imagesmin/iphone-in-hand-tablet@2x.png 2x" 
            class="iphone-image__item" 
            alt="iPhone" 
         />
-        <img src="images/iphone-screen-main-tablet.jpg" 
-            srcset="images/iphone-screen-main-tablet.jpg 1x, images/iphone-screen-main-tablet@2x.jpg"
+        <img src="imagesmin/iphone-screen-tablet@1x.png" 
+            srcset="imagesmin/iphone-screen-tablet@1x.png 1x, imagesmin/iphone-screen-main-tablet@2x.png"
             class="iphone-image__item-screen" alt="iPhone screen" 
         />
       </div>
       <div class="iphone-image iphone-image--desktop">
-        <img src="images/iphone-in-hand-desktop.svg" 
-           srcset="images/iphone-in-hand-desktop.svg 1x, images/iphone-in-hand-desktop@2x.svg 2x" 
+        <img src="imagesmin/iphone-in-hand-desktop@1x.png" 
+           srcset="imagesmin/iphone-in-hand-desktop@1x.png 1x, imagesmin/iphone-in-hand-desktop@2x.png 2x" 
            class="iphone-image__item" 
            alt="iPhone" 
         />
-        <img src="images/iphone-screen-main-desktop.jpg" 
-            srcset="images/iphone-screen-main-desktop.jpg 1x, images/iphone-screen-main-desktop@2x.jpg"
+        <img src="imagesmin/iphone-screen-main-desktop@1x.png" 
+            srcset="imagesmin/iphone-screen-main-desktop@1x.png 1x, imagesmin/iphone-screen-main-desktop@2x.png"
             class="iphone-image__item-screen" alt="iPhone screen" 
         />
       </div>
@@ -126,20 +126,20 @@
             <div class="features__item features__item--first">
               <h3 class="features__item-title">Поднимает настроение</h3>
               <p class="features__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-              <img src="images/screen1-desktop.svg" class="screen-features-desktop screen1-desktop">
+              <img src="imagesmin/screen1-desktop.png" class="screen-features-desktop screen1-desktop">
             </div>
             <div class="features__item features__item--second">
               <h3 class="features__item-title">Меняет мир вокруг</h3>
               <p class="features__item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-              <img src="images/screen2-desktop.svg" class="screen-features-desktop screen2-desktop">
+              <img src="imagesmin/screen2-desktop.png" class="screen-features-desktop screen2-desktop">
             </div>
             <div class="features__item features__item--third">
               <h3 class="features__item-title">Заводит новых друзей</h3>
               <p class="features__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-              <img src="images/screen3-desktop.svg" class="screen-features-desktop screen3-desktop">
+              <img src="imagesmin/screen3-desktop.png" class="screen-features-desktop screen3-desktop">
             </div>
           </div>
-          <img src="images/screen-features-tablet.svg" class="screen-features-tablet">
+          <img src="imagesmin/screen-features-tablet.png" class="screen-features-tablet">
         </div>
       </section>
       
